# access-moppy-progress

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  propose_submission.yml
.github/workflows/: build_dashboard.yml  create_request_from_issue.yml  validate_plans.yml
dashboard/: app.js  index.html  style.css
data/: variable_metadata.json
plans/: ACCESS-ESM1.6.yaml
progress/ACCESS-ESM1.6/historical/r1i1p1f1/: cmorisation.json  publication.json
progress/ACCESS-ESM1.6/historical/r2i1p1f1/: cmorisation.json
progress/ACCESS-ESM1.6/historical/r3i1p1f1/: cmorisation.json  publication.json
progress/ACCESS-ESM1.6/piControl/r1i1p1f1/: cmorisation.json
requests/: ACCESS-ESM1.6_ssp585_r1i1p1f1.yaml
schemas/: cmorisation_report.schema.json  plan.schema.json  publication.schema.json  submission_request.schema.json
scripts/: compile_progress.py  generate_batch_config.py  ingest_report.py  issue_to_request.py  validate_plans.py  validate_requests.py
